# velora-engine

./: .gitignore  Cargo.toml  README.md
.cursor/rules/: engine.mdc  linter-errors.mdc  mcp.json
cinder_browser/: Cargo.toml
cinder_browser/examples/: minimal.rs
css/: Cargo.toml
css/src/: lib.rs
dom/: Cargo.toml
dom/src/: lib.rs
jsrt/: Cargo.toml
jsrt/src/: lib.rs
layout/: Cargo.toml
layout/src/: lib.rs
net/: Cargo.toml
net/src/: lib.rs
paint/: Cargo.toml
paint/src/: lib.rs
parser/: Cargo.toml
parser/src/: lib.rs
velora_browser/: Cargo.toml
velora_browser/examples/: browser_ui.rs  simple_box.rs  tabs.rs  wgpu_test.rs  window_box.rs
velora_browser/src/: browser.rs  input_handler.rs  lib.rs  main.rs  ui.rs  ui_renderer.rs
velora_browser/src/shaders/: ui.wgsl
velora_core/: Cargo.toml
velora_core/src/: error.rs  lib.rs  types.rs  utils.rs
velora_dom/: Cargo.toml
velora_dom/src/: document.rs  element.rs  lib.rs  node.rs  parser.rs  tree.rs
velora_jsrt/: Cargo.toml
velora_jsrt/src/: bindings.rs  context.rs  lib.rs  runtime.rs
velora_layout/: Cargo.toml
velora_layout/src/: box_model.rs  flexbox.rs  grid.rs  layout_tree.rs  lib.rs
velora_net/: Cargo.toml
velora_net/src/: cache.rs  client.rs  lib.rs  resource.rs
velora_paint/: Cargo.toml
velora_paint/src/: images.rs  lib.rs  renderer.rs  shapes.rs  text.rs
velora_parser/: Cargo.toml
velora_parser/src/: css.rs  html.rs  lib.rs  tokenizer.rs
velora_platform/: Cargo.toml
velora_platform/src/: graphics.rs  input.rs  lib.rs  platform.rs  window.rs
velora_platform/src/graphics/: buffers.rs  config.rs  context.rs  mod.rs  pipeline.rs  vertex.rs
velora_platform/src/shaders/: basic.wgsl
