[workspace]
resolver = "2"
members = [
    "velora_core",
    "velora_dom",
    "velora_parser",
    "velora_layout",
    "velora_paint",
    "velora_net",
    "velora_jsrt",
    "velora_browser",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Velora Engine Team"]
description = "A modular web engine built in Rust"
license = "MIT"
repository = "https://github.com/velora/velora-engine"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

# Async runtime
tokio = { version = "1.47", features = ["full"] }

# DOM and HTML parsing
html5ever = "0.35"
markup5ever = "0.35"
tendril = "0.4.3"

# CSS parsing and styling
cssparser = "0.35"
selectors = "0.31"

# JavaScript runtime - simplified for now
# deno_core = "0.222"
# deno_runtime = "0.222"

# Networking
reqwest = { version = "0.12.23", features = ["json"] }
url = "2.5.7"

# Utilities
uuid = { version = "1.18", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"



# Window and GPU
winit = "0.30.12"
wgpu = "26.0.1"
egui = "0.32.1"