[workspace]
resolver = "2"
members = [
    "parser",
    "dom",
    "css",
    "layout",
    "paint",
    "net",
    "jsrt",
    "cinder_browser",
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }