[package]
name = "cinder_browser"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parser = { path = "../parser" }
dom = { path = "../dom" }
css = { path = "../css" }
layout = { path = "../layout" }
paint = { path = "../paint" }
net = { path = "../net" }
jsrt = { path = "../jsrt" }

[[example]]
name = "minimal"
path = "examples/minimal.rs"

