[package]
name = "velora_browser"
version = "0.1.0"
edition = "2021"
authors = ["Velora Engine Team"]
description = "A web browser built with Velora Engine"
license = "MIT"
repository = "https://github.com/velora/velora-engine"

[dependencies]
winit = { workspace = true }
egui = { workspace = true }
egui-winit = "0.32.1"
eframe = "0.32.1"