[package]
name = "velora_core"
version = "0.1.0"
edition = "2021"
authors = ["Velora Engine Team"]
description = "Core types and utilities for the Velora web engine"
license = "MIT"
repository = "https://github.com/velora/velora-engine"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
log = { workspace = true }
urlencoding = { workspace = true }
