[package]
name = "velora_dom"
version = "0.1.0"
edition = "2021"
authors = ["Velora Engine Team"]
description = "DOM implementation for the Velora web engine"
license = "MIT"
repository = "https://github.com/velora/velora-engine"

[dependencies]
velora_core = { path = "../velora_core" }
html5ever = { workspace = true }
markup5ever = { workspace = true }
tendril = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
log = { workspace = true }
