[package]
name = "velora_jsrt"
version = "0.1.0"
edition = "2021"
authors = ["Velora Engine Team"]
description = "JavaScript runtime for the Velora web engine"
license = "MIT"
repository = "https://github.com/velora/velora-engine"

[dependencies]
velora_core = { path = "../velora_core" }
velora_dom = { path = "../velora_dom" }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
