[package]
name = "velora_layout"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Layout engine for the Velora web engine"
license.workspace = true
repository.workspace = true

[dependencies]
velora_core = { path = "../velora_core" }
velora_dom = { path = "../velora_dom" }
serde = { workspace = true, features = ["derive"] }
log = { workspace = true }
