[package]
name = "velora_layout"
version = "0.1.0"
edition = "2021"
authors = ["Velora Engine Team"]
description = "Layout engine for the Velora web engine"
license = "MIT"
repository = "https://github.com/velora/velora-engine"

[dependencies]
velora_core = { path = "../velora_core" }
velora_dom = { path = "../velora_dom" }
serde = { workspace = true, features = ["derive"] }
log = { workspace = true }
