[package]
name = "velora_parser"
version = "0.1.0"
edition = "2021"
authors = ["Velora Engine Team"]
description = "HTML and CSS parser for the Velora web engine"
license = "MIT"
repository = "https://github.com/velora/velora-engine"

[dependencies]
velora_core = { path = "../velora_core" }
velora_dom = { path = "../velora_dom" }
html5ever = { workspace = true }
markup5ever = { workspace = true }
tendril = { workspace = true }
cssparser = { workspace = true }
selectors = { workspace = true }
serde = { workspace = true, features = ["derive"] }
log = { workspace = true }
