[package]
name = "velora_platform"
version = "0.1.0"
edition = "2021"
authors = ["Velora Engine Team"]
description = "Cross-platform window management and graphics for the Velora web engine"
license = "MIT"
repository = "https://github.com/velora/velora-engine"

[dependencies]
velora_core = { path = "../velora_core" }
wgpu = { workspace = true }
winit = { workspace = true }
raw-window-handle = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
